--- a/css/main.css
+++ b/css/main.css
@@ -139,12 +139,29 @@ fieldset {
 }
 #sort input[type="radio"] + label {
     padding: .025em .5em;
+    cursor: pointer;
 }
 #sort input[type="radio"]:checked + label {
     color: #fff;
     background: #8ebd2e;
+    border-radius: 5px ;
+    transition: all 500ms;
 }
 
+#sort input[type="radio"]:checked + label:after {
+    content: "\21E4";
+    display: inline-block;
+    -webkit-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    transform: rotate(-90deg);
+    transition: all 300ms;
+}
+
+#sort input[type="radio"]:checked + label.desc:after {
+    -webkit-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
 
 input, select {
     width: 100%;
@@ -160,19 +177,100 @@ input, label {
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: relative;
+    
 }
 
 .entry {
+    background-color: #ffffff;
     padding: .5rem;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex: 0 1 20%;
     align-items: normal;
+    position: relative;
+    border-radius: 10px;
+    border: #ebebeb 1px solid;
+    margin: 5px;
+    transition: transform 300ms;
+    overflow: hidden;
+    z-index: 1;
+    min-width: 90%;       
+    
 }
+@media (min-width: 480px) {
+    .entry {
+        min-width:40%;
+    }    
+}
+
+@media (min-width: 960px) {
+    .entry {
+        min-width:30%;
+    }    
+}
+@media (min-width: 1200px) {
+    .entry {
+        min-width:20%;
+    }    
+}
+
 .entry:nth-child(odd) {
     background: #ebebeb;
+}
+
+.entry:hover {
+    transform: scale(1.5);
+    z-index: 9;
 }
 .entry figure {
     text-align: center;
     margin: 0 auto;
+    position: relative;
+    
+}
+@media  (max-width:479px){
+    
+    .entry figure figcaption {
+        display: none;
+    }
+}
+
+
+.entry figure img { 
+
+    width:100%;
+}
+.entry footer {
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    position: absolute;
+    left: 0;
+    bottom:0;
+    background-color: #3f3f3f;
+    font-size: 1.5vw;
+    width: 100%;
+    max-height: 1px;
+    padding: 0 10px;
+    opacity: 0;
+    transition: all 500ms;
+    z-index: 1;
+    
+}
+
+@media (min-width: 960px) {
+    .entry footer{
+        font-size: 1vw;
+    }    
+}
+
+
+.entry:hover footer {
+    opacity: 1;
+    max-height: 30%;
+}
+.entry:nth-child(odd) footer { 
+    /* background-color: #3f3f3f; */
 }
